<resources>
    <string name="app_name">Pyvela</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="text_view">STARTING TEST</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_entrance">EntranceActivity</string>
    <string name="profile_button">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">Hello World, Click Me!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="authLoginHint">Login</string>
    <string name="authPasswordHint">Password</string>

    <string name="authSingUp">Don\'t have an account? Sign up</string>
    <string name="authForgotPassword">FORGOT YOUR PASSWORD?</string>

    <string name="authSignIn">Sign In</string>

    <string name="regEmailText">e-mail</string>
    <string name="regPhoneNumberText">phone</string>
    <string name="regIINText">IIN</string>
    <string name="regPasswordText">Password</string>
    <string name="regRePasswordText">Re Password</string>
    <string name="title_activity_act_main">PYVELA</string>

    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="profEdit">Edit</string>

</resources>
